--- a/ASProjektWPF/Theme/MenuSearchButtonTheme.xaml
+++ b/ASProjektWPF/Theme/MenuSearchButtonTheme.xaml
@@ -1,27 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type Button}" x:Key="ProfileSaveButtonTheme">
+    <Style TargetType="{x:Type Button}" x:Key="SearchButton">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border>
-                            <TextBlock Text="{TemplateBinding Property=Content}" Background="{TemplateBinding Background}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"/>
+                        <Border BorderBrush="{TemplateBinding Property=Foreground}" BorderThickness="1" CornerRadius="10">
+                            <TextBlock Text="{TemplateBinding Property=Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{TemplateBinding Foreground}" Padding="10" FontSize="15"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Cursor" Value="Hand"/>
-                                <Setter Property="Background" Value="#6D6D6D"/>
-                                <Setter Property="Foreground" Value="White"/>
+                                <Setter Property="Foreground" Value="#414141"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
-                                <Setter Property="Background" Value="#525252"/>
-                                <Setter Property="Foreground" Value="White"/>
+                                <Setter Property="Cursor" Value="Hand"/>
+                                <Setter Property="Foreground" Value="#414141"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Setter Property="BorderThickness" Value="0"/>
         </Style.Setters>
     </Style>
 </ResourceDictionary>
