--- a/ASProjektWPF/Theme/ProfileCancelButtonTheme.xaml
+++ b/ASProjektWPF/Theme/ProfileCancelButtonTheme.xaml
@@ -4,7 +4,7 @@
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
+                    <ControlTemplate TargetType="Button">
                         <Border BorderBrush="{TemplateBinding Property=Foreground}" BorderThickness="1">
                             <TextBlock Text="{TemplateBinding Property=Content}" Background="{TemplateBinding Background}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{TemplateBinding Foreground}" Padding="5"/>
                         </Border>
