--- a/ASProjektWPF/Theme/ProfileEditButtonTheme.xaml
+++ b/ASProjektWPF/Theme/ProfileEditButtonTheme.xaml
@@ -4,7 +4,7 @@
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
+                    <ControlTemplate TargetType="Button">
                         <Border BorderBrush="#bfbfbf" BorderThickness="1">
                             <TextBlock Text="{TemplateBinding Property=Content}" Background="{TemplateBinding Background}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"/>
                         </Border>
