--- a/ASProjektWPF/Pages/Announcment_AddEdit.xaml
+++ b/ASProjektWPF/Pages/Announcment_AddEdit.xaml
@@ -7,8 +7,176 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Announcment_AddEdit">
+    <ScrollViewer>
+        <StackPanel>
+            <Button Padding="10" Margin="10" HorizontalAlignment="Left" Background="Transparent" BorderThickness="0" Click="Btn_Back_Click">
+                <Image Source="/Images/App/back.png" MaxHeight="20"/>
+            </Button>
+            <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Nazwa Ogłoszenia" Margin="10"/>
+                    <TextBox Grid.Column="1" x:Name="Txt_Name" Width="200" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock Grid.Row="1" Text="Pozycja: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
+                    <TextBox Grid.Column="1" Grid.Row="1" x:Name="Txt_PositionName" Width="200" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock Grid.Row="2" Text="Poziom stanowiska: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
+                    <ComboBox x:Name="CmB_PositionLevel" Grid.Column="1" Grid.Row="2" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <TextBlock Grid.Row="3" Text="Rodzaj umowy: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
+                    <ComboBox x:Name="CmB_ContractType" Grid.Column="1" Grid.Row="3" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <TextBlock Grid.Row="4" Text="Wymiar pracy: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
+                    <ComboBox x:Name="CmB_WorkType" Grid.Column="1" Grid.Row="4" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <TextBlock Grid.Row="5" Text="Tryb pracy: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
+                    <ComboBox x:Name="CmB_WorkTime" Grid.Column="1" Grid.Row="5" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <StackPanel  Grid.Row="7" Grid.ColumnSpan="2" Margin="10">
+                        <StackPanel>
+                            <TextBlock Text="Obowiązki: "/>
+                            <ListView x:Name="SP_Responsibilites" BorderThickness="0" Background="Transparent">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="IsHitTestVisible" Value="True"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="ListViewItem">
+                                                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                                                        <ContentPresenter/>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBox Text="{Binding Content}"/>
+                                            <Button Grid.Column="1" Content="Usuń" CommandParameter="{Binding .}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                            <Button Content="Dodaj obowiązek" HorizontalAlignment="Center" Padding="10"/>
+                        </StackPanel>
+                        <TextBlock Text="Wymagania: "/>
+                        <StackPanel>
+                            <ListView x:Name="SP_Requirements" BorderThickness="0" Background="Transparent">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="IsHitTestVisible" Value="True"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="ListViewItem">
+                                                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                                                        <ContentPresenter/>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBox Text="{Binding Content}"/>
+                                            <Button Grid.Column="1" Content="Usuń" CommandParameter="{Binding .}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                            <Button Content="Dodaj Wymaganie" HorizontalAlignment="Center" Padding="10"/>
+                        </StackPanel>
+                        <TextBlock Text="Benefity: "/>
+                        <StackPanel>
+                            <ListView x:Name="SP_Benefits" BorderThickness="0" Background="Transparent">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="IsHitTestVisible" Value="True"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="ListViewItem">
+                                                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                                                        <ContentPresenter/>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBox Text="{Binding Content}"/>
+                                            <Button Grid.Column="1" Content="Usuń" CommandParameter="{Binding .}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                            <Button Content="Dodaj Benefity" HorizontalAlignment="Center" Padding="10"/>
+                        </StackPanel>
+                    </StackPanel>
 
-    <Grid>
+                </Grid>
+                <Button Grid.Row="1" x:Name="Btn_AddUpdateAnnouncment" Click="Btn_AddUpdateAnnouncment_Click" HorizontalAlignment="Center" Padding="10"/>
+            </Grid>
+        </StackPanel>
         
-    </Grid>
+    </ScrollViewer>
 </Page>
