--- a/ASProjektWPF/Pages/Announcment_AddEdit.xaml
+++ b/ASProjektWPF/Pages/Announcment_AddEdit.xaml
@@ -23,16 +23,16 @@
                 </Grid.ColumnDefinitions>
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -43,41 +43,17 @@
                     <TextBlock Grid.Row="1" Text="Pozycja: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
                     <TextBox Grid.Column="1" Grid.Row="1" x:Name="Txt_PositionName" Width="200" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <TextBlock Grid.Row="2" Text="Poziom stanowiska: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
-                    <ComboBox x:Name="CmB_PositionLevel" Grid.Column="1" Grid.Row="2" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Name}" />
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <ComboBox x:Name="CmB_PositionLevel" Grid.Column="1" Grid.Row="2" Margin="10" SelectedIndex="0"/>
                     <TextBlock Grid.Row="3" Text="Rodzaj umowy: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
-                    <ComboBox x:Name="CmB_ContractType" Grid.Column="1" Grid.Row="3" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <ComboBox x:Name="CmB_ContractType" Grid.Column="1" Grid.Row="3" Margin="10" SelectedIndex="0"/>
                     <TextBlock Grid.Row="4" Text="Wymiar pracy: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
-                    <ComboBox x:Name="CmB_WorkType" Grid.Column="1" Grid.Row="4" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Name}" />
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <ComboBox x:Name="CmB_WorkType" Grid.Column="1" Grid.Row="4" Margin="10" SelectedIndex="0"/>
                     <TextBlock Grid.Row="5" Text="Tryb pracy: " HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>
-                    <ComboBox x:Name="CmB_WorkTime" Grid.Column="1" Grid.Row="5" Margin="10" DisplayMemberPath="Name" SelectedValuePath="Id">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Name}" />
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <ComboBox x:Name="CmB_WorkTime" Grid.Column="1" Grid.Row="5" Margin="10" SelectedIndex="0"/>
                     <StackPanel  Grid.Row="7" Grid.ColumnSpan="2" Margin="10">
                         <StackPanel>
                             <TextBlock Text="Obowiązki: "/>
-                            <ListView x:Name="SP_Responsibilites" BorderThickness="0" Background="Transparent">
+                            <ListView x:Name="LV_Responsibilities" BorderThickness="0" Background="Transparent">
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="ListViewItem">
                                         <Setter Property="IsHitTestVisible" Value="True"/>
@@ -99,13 +75,15 @@
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="auto"/>
                                             </Grid.ColumnDefinitions>
-                                            <TextBox Text="{Binding Content}"/>
-                                            <Button Grid.Column="1" Content="Usuń" CommandParameter="{Binding .}"/>
+                                            <TextBlock Text="{Binding Content}"/>
+                                            <Button Grid.Column="1" Content="Usuń"  Click="Btn_DeleteItemResponsibiliti_Click" CommandParameter="{Binding .}"/>
                                         </Grid>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                             </ListView>
-                            <Button Content="Dodaj obowiązek" HorizontalAlignment="Center" Padding="10"/>
+                            <Label Content="Nazwa obowiązku: "/>
+                            <TextBox x:Name="TxtB_Responsibility_Content"/>
+                            <Button x:Name="Btn_AddResponsible" Content="Dodaj obowiązek" HorizontalAlignment="Center" Padding="10" Click="Btn_AddResponsible_Click"/>
                         </StackPanel>
                         <TextBlock Text="Wymagania: "/>
                         <StackPanel>
@@ -172,7 +150,6 @@
                             <Button Content="Dodaj Benefity" HorizontalAlignment="Center" Padding="10"/>
                         </StackPanel>
                     </StackPanel>
-
                 </Grid>
                 <Button Grid.Row="1" x:Name="Btn_AddUpdateAnnouncment" Click="Btn_AddUpdateAnnouncment_Click" HorizontalAlignment="Center" Padding="10"/>
             </Grid>
